# playground

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt  settings.py  test_async_openai.py
config/: .env.example
data/sample_images/: example.txt
jailbreak/: prompts.py
jailbreak/Cursor-Claude-3.7/: functions.json  system.md  system.txt
jailbreak/Cursor-Claude-3.7-thinking/: functions.json  system.md  system.txt
llm_tricks/: README.md
llm_tricks/01_json_schema/: README.md  basic_schema.json  compare_openai.py  complex_pydantic_model.py  complex_schema.json  demo.py  schema_examples.py  story.md
ml/: README.md  run_all_assistants.py  test_email_assistant.py
ml/2024-02-gpt-vision-analysis/: README.md
ml/2024-02-gpt-vision-analysis/src/: example.py
ml/2024-02-gpt-vision-analysis/tests/: test_vision_analyzer.py
ml/crewai_assistant/: personal_assistant.py
ml/gpt-vision-analysis/: requirements.txt
ml/gpt-vision-analysis/src/: config.py  example.py  vision_analyzer.py
ml/gpt-vision-analysis/tests/: test_vision_analyzer.py
ml/langgraph-ski/: README.md  ski_status_social.py
ml/langgraph_assistant/: personal_assistant.py
ml/logs/: crewai_output_20250225_191922.txt  langgraph_output_20250225_191922.txt  metagpt_output_20250225_191922.txt
ml/metagpt_assistant/: personal_assistant.py
